--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==1.1.2
-numpy==1.22.4
-scipy==1.8.1
-gunicorn==20.1.0
-cryptography==2.9.2
-Jinja2==2.11.2
-markupsafe==2.0.1
-itsdangerous==2.0.1
-werkzeug==1.0.1
-opencv-python-headless==4.6.0.66
-setuptools==65.5.0
+Flask
+numpy
+scipy
+gunicorn
+cryptography
+Jinja2
+markupsafe
+itsdangerous
+werkzeug
+opencv-python-headless
+wheel
